--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   ],
   "author": "preran",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
